@@ -1,3 +1,7 @@
+2013-06-22  Gabriel Dos Reis  <gdr@integrable-solutions.net>
+
+	* include/SourceFile.H: New.
+
 2013-06-21  Gabriel Dos Reis  <gdr@integrable-solutions.net>
 
 	* include/FileMapping.H: New.
